--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "Vladimir Kuzma",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.3.7",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
     "clean-webpack-plugin": "^0.1.9",
     "extract-text-webpack-plugin": "^1.0.1",
+    "postcss-loader": "^0.9.1",
     "progress-bar-webpack-plugin": "^1.8.0",
     "webpack-merge": "^0.14.0",
     "webpack-validator": "^2.2.0",
