--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "webpack-merge": "^0.14.0",
     "webpack-validator": "^2.2.0",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
