--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
     "clean-webpack-plugin": "^0.1.9",
+    "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "postcss-loader": "^0.9.1",
     "progress-bar-webpack-plugin": "^1.8.0",
-    "webpack-merge": "^0.14.0",
-    "webpack-validator": "^2.2.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.14.0",
+    "webpack-validator": "^2.2.0"
   }
 }
