--- a/.editorconfig
+++ b/.editorconfig
@@ -7,8 +7,15 @@ insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = true
 
-# javascript tab
 [*.js]
+indent_style = space
+indent_size = 4
+
+[*.less]
+indent_style = space
+indent_size = 4
+
+[*.html]
 indent_style = space
 indent_size = 4
 
