--- a/.editorconfig
+++ b/.editorconfig
@@ -7,15 +7,7 @@ insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = true
 
-[*.js]
-indent_style = space
-indent_size = 4
-
-[*.less]
-indent_style = space
-indent_size = 4
-
-[*.html]
+[*.{js,less,css,html}]
 indent_style = space
 indent_size = 4
 
